# softfido

./: Cargo.toml
.github/workflows/: softfido.yaml
pkg/: 99-usbip.rules
pkg/scripts/: postinst  preinst
src/: crypto.rs  ctaphid.rs  main.rs  prompt.rs
