[package]
name = "softfido"
version = "0.1.1"
authors = ["Helmut Eller <eller.helmut@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
copyright = "Helmut Eller"
exclude = ["python"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
maintainer = "Kristian Mika <kristian.mika@protonmail.com>"
extended-description = """\
A virtual FIDO token that uses a PKCS#11 library as a backend, supporting U2F and FIDO2 protocols."""
depends = "$auto, linux-tools-generic (>=5.15)"
section = "utility"
priority = "optional"
revision = ""
assets = [
    [
        "target/release/softfido",
        "usr/bin/softfido",
        "755",
    ],
    [
        "pkg/vhci-hcd.conf",
        "etc/modules-load.d/vhci-hcd.conf",
        "644",
    ],
    [
        "pkg/99-usbip.rules",
        "/etc/udev/rules.d/99-usbip.rules",
        "644",
    ],
]
maintainer-scripts = "pkg/scripts"

[dependencies]
packed_struct = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10.2"
pkcs11 = "0.4.1"
secstr = "0.4.0"
pinentry-rs = "0.1.0"
x509 = "0.1.2"
chrono = "0.4"
cookie-factory = "0.3.0"
lazy_static = "1.4.0"

[build-dependencies]
bindgen = "0.69.0"
